--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -10,3 +10,37 @@
     #A7C7F7 100%
   );
 }
+
+.logo-text {
+  background: linear-gradient(90deg, #f9b233, #ef4fa6) !important;
+  background-clip: text !important;
+  -webkit-background-clip: text !important;
+  color: transparent !important;
+  -webkit-text-fill-color: transparent !important;
+  padding: 10px;
+  font-family: 'Cherry Bomb One', cursive;
+}
+
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0%;
+}
+
+.gradient-border {
+  border: 3px solid transparent;
+  border-image: linear-gradient(90deg, #f9b233, #ef4fa6) 1;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+.favicon {
+  display: inline;
+  margin-right: 10px;
+  width: 20px;
+  height: auto;
+}
