--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -11,21 +11,29 @@
   );
 }
 
-.logo-text {
-  background: linear-gradient(90deg, #f9b233, #ef4fa6) !important;
-  background-clip: text !important;
-  -webkit-background-clip: text !important;
-  color: transparent !important;
-  -webkit-text-fill-color: transparent !important;
-  padding: 10px;
-  font-family: 'Cherry Bomb One', cursive;
+.main_container {
+  display: grid;
+  grid-template-areas: 'hello login login';
 }
 
-.banner-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: 0%;
+.hello {
+  background-color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  align-content: center;
+  grid-template: hello;
+}
+
+.login_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-template: login;
+}
+
+.login svg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .gradient-border {
@@ -43,4 +51,13 @@
   margin-right: 10px;
   width: 20px;
   height: auto;
+}
+
+@media only screen and (max-width: 1100px) {
+  .main_container {
+    display: grid;
+    grid-template-areas: 
+    'hello'
+    'login';
+  }
 }
