--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -53,6 +53,8 @@ html, body {
   background-color: rgba(255, 255, 255, 0.9);
   text-align: center;
   align-content: center;
+  margin: 10px;
+  border-radius: 12px;
   grid-template: hello;
 }
 
@@ -61,12 +63,6 @@ html, body {
   justify-content: center;
   align-items: center;
   grid-template: login;
-}
-
-.login svg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .gradient-border {
