--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -69,8 +69,6 @@ html, body {
   grid-area: login;
 }
 
-
-
 .gradient-border {
   border: 3px solid transparent;
   border-image: linear-gradient(90deg, #f9b233, #ef4fa6) 1;
@@ -86,6 +84,32 @@ html, body {
   margin-right: 10px;
   width: 20px;
   height: auto;
+}
+
+.logo {
+  margin: auto;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: white;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgba(219, 54, 164, 0.1);
+  color: rgba(219, 54, 164, 1);
+}
+
+.button img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.button:hover {
+  background-color: rgba(219, 54, 164, 0.1);
 }
 
 @media only screen and (max-width: 1100px) {
