--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -112,6 +112,27 @@ html, body {
   background-color: rgba(219, 54, 164, 0.1);
 }
 
+input {
+  background-color: #FFFFFF;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 7px;
+  border-color: #D9D9D9; 
+  height: 40px; 
+  width: 500px; 
+  padding: 10px;
+}
+
+.register-btn {
+  border-radius: 7px;
+  height: 40px; 
+  width: 500px; 
+  padding: 10px;
+  margin-top: 50px;
+  color: white;
+  font-weight: bold;
+}
+
 @media only screen and (max-width: 1100px) {
   .main_container {
     display: grid;
