--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -28,7 +28,11 @@
 }
 
 @utility bg-brand-gradient-softer {
-  background: linear-gradient(124.96deg, --alpha(#F7FF00 / 50%) -40.87%, --alpha(#DB36A4 / 30%) 92.26%);
+  background: white linear-gradient(124.96deg, --alpha(#F7FF00 / 50%) -40.87%, --alpha(#DB36A4 / 30%) 92.26%);
+}
+
+:root {
+  --ui-radius: 0.5rem;
 }
 
 html, body {
@@ -36,108 +40,4 @@ html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.bg-rainbow {
-  height: 100vh;
-  background: linear-gradient(
-    to bottom,
-    #ED7474 0%,
-    #FFF89A 63%,
-    #B5EAD7 83%,
-    #A7C7F7 100%
-  );
-}
-.main_container {
-  display: grid;
-  grid-template-areas: 'hello login login login';
-}
-
-.hello {
-  background-color: rgba(255, 255, 255, 0.9);
-  text-align: center;
-  align-content: center;
-  margin: 10px;
-  border-radius: 12px;
-  grid-area: hello;
-}
-
-.login_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-area: login;
-}
-
-.gradient-border {
-  border: 3px solid transparent;
-  border-image: linear-gradient(90deg, #f9b233, #ef4fa6) 1;
-  border-radius: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 30px;
-  padding-top: 30px;
-}
-
-.favicon {
-  display: inline;
-  margin-right: 10px;
-  width: 20px;
-  height: auto;
-}
-
-.logo {
-  margin: auto;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-  background-color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: rgba(219, 54, 164, 0.1);
-  color: rgba(219, 54, 164, 1);
-}
-
-.button img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.button:hover {
-  background-color: rgba(219, 54, 164, 0.1);
-}
-
-input {
-  background-color: #FFFFFF;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 7px;
-  border-color: #D9D9D9; 
-  height: 40px; 
-  width: 500px; 
-  padding: 10px;
-}
-
-.register-btn {
-  border-radius: 7px;
-  height: 40px; 
-  width: 500px; 
-  padding: 10px;
-  margin-top: 50px;
-  color: white;
-  font-weight: bold;
-}
-
-@media only screen and (max-width: 1100px) {
-  .main_container {
-    display: grid;
-    grid-template-areas: 
-    'hello'
-    'login';
-  }
 }
