feat(frontend): connected listings, permissions with backend

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -5,19 +5,19 @@
   --font-sans: 'Montserrat', system-ui, sans-serif;
   --font-mono: 'JetBrains Mono', monospace;
 
-  --color-beige-50: #F7F4E6;
-  --color-beige-100: #eeebdd;
-  --color-beige-200: #EAE8DE;
-  --color-beige-300: #D5D1C0;
-  --color-beige-400: #B6B096;
-  --color-beige-500: #968F70;
-  --color-beige-600: #878166;
-  --color-beige-700: #78735A;
-  --color-beige-800: #69644F;
-  --color-beige-900: #4B4838;
-  --color-beige-950: #2F2E24;
+  --color-surface-50: #F7F4E6;
+  --color-surface-100: #eeebdd;
+  --color-surface-200: #EAE8DE;
+  --color-surface-300: #D5D1C0;
+  --color-surface-400: #B6B096;
+  --color-surface-500: #968F70;
+  --color-surface-600: #878166;
+  --color-surface-700: #78735A;
+  --color-surface-800: #69644F;
+  --color-surface-900: #4B4838;
+  --color-surface-950: #2F2E24;
 
-  --color-surface: var(--color-beige-50);
+  --color-surface: var(--color-surface-50);
 }
 
 @utility bg-brand-gradient {
